force-app/main/default/objects/Account/fields/LearningLogin_Contract_State__c.field-meta.xml
<CustomField>
    <fullName>LearningLogin_Contract_State__c</fullName>
    <label>LearningLogin Contract State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Trial</fullName>
            </value>
            <value>
                <fullName>Suspended</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>