force-app/main/default/objects/Account/fields/LearningLogin_Id__c.field-meta.xml
<CustomField>
    <fullName>LearningLogin_Id__c</fullName>
    <label>LearningLogin ID</label>
    <length>8</length>
    <type>Text</type>
</CustomField>