force-app/main/default/objects/Account/fields/LearningLogin_Owner_Do_Not_Sync__c.field-meta.xml
<CustomField>
    <fullName>LearningLogin_Owner_Do_Not_Sync__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked, does not update LMS owner reference for accounts and orders</inlineHelpText>
    <label>LearningLogin Owner Do Not Sync</label>
    <type>Checkbox</type>
</CustomField>