force-app/main/default/objects/Account/fields/Lifetime_Sales__c.field-meta.xml
<CustomField>
    <fullName>Lifetime_Sales__c</fullName>
    <formula>Sales_2004__c  + Sales_2005__c + Sales_2006__c + Sales_2007__c + Sales_2008__c + Sales_2009__c + Sales_2010__c + Sales_2011__c + Sales_2012__c + Sales_2013__c + Sales_2014__c + Sales_2015__c + Sales_2016__c + Sales_2017__c + Sales_2018__c + Sales_2019__c + Sales_2020__c+Sales_2021__c+Sales_2022__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lifetime Sales</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>