force-app/main/default/objects/Account/fields/LMS_Credit_Balance__c.field-meta.xml
<CustomField>
    <fullName>LMS_Credit_Balance__c</fullName>
    <label>LMS Credit Balance</label>
    <summarizedField>Credit_Note__c.Balance__c</summarizedField>
    <summaryFilterItems>
        <field>Credit_Note__c.From_LMS__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Credit_Note__c.Balance__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </summaryFilterItems>
    <summaryForeignKey>Credit_Note__c.Account__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>