force-app/main/default/objects/Account/fields/Lock_Owner__c.field-meta.xml
<CustomField>
    <fullName>Lock_Owner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lock Owner</label>
    <type>Checkbox</type>
</CustomField>