force-app/main/default/objects/Account/fields/March_Goal__c.field-meta.xml
<CustomField>
    <fullName>March_Goal__c</fullName>
    <label>March Goal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>