force-app/main/default/objects/Account/fields/March_State__c.field-meta.xml
<CustomField>
    <fullName>March_State__c</fullName>
    <label>March State</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>