force-app/main/default/objects/Account/fields/Margins_12_Months__c.field-meta.xml
<CustomField>
    <fullName>Margins_12_Months__c</fullName>
    <formula>Margins_Month_1__c + 
 Margins_Month_2__c + 
 Margins_Month_3__c + 
 Margins_Month_4__c + 
 Margins_Month_5__c + 
 Margins_Month_6__c + 
 Margins_Month_7__c + 
 Margins_Month_8__c + 
 Margins_Month_9__c + 
 Margins_Month_10__c + 
 Margins_Month_11__c + 
 Margins_Month_12__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Margins 12 Months</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>