force-app/main/default/objects/Account/fields/Margins_13_24_Months__c.field-meta.xml
<CustomField>
    <fullName>Margins_13_24_Months__c</fullName>
    <formula>Margins_Month_13__c + 
 Margins_Month_14__c + 
 Margins_Month_15__c + 
 Margins_Month_16__c + 
 Margins_Month_17__c + 
 Margins_Month_18__c + 
 Margins_Month_19__c + 
 Margins_Month_20__c + 
 Margins_Month_21__c + 
 Margins_Month_22__c + 
 Margins_Month_23__c + 
 Margins_Month_24__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Margins 13-24 Months</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>