force-app/main/default/objects/Account/fields/Margins_Month_0__c.field-meta.xml
<CustomField>
    <fullName>Margins_Month_0__c</fullName>
    <label>Margins_Month_0</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>