force-app/main/default/objects/Account/fields/May_Goal__c.field-meta.xml
<CustomField>
    <fullName>May_Goal__c</fullName>
    <label>May Goal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>