force-app/main/default/objects/Account/fields/May_State__c.field-meta.xml
<CustomField>
    <fullName>May_State__c</fullName>
    <label>May State</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>