force-app/main/default/objects/Account/fields/NAME_CLEANUP__c.field-meta.xml
<CustomField>
    <fullName>NAME_CLEANUP__c</fullName>
    <label>NAME_CLEANUP</label>
    <length>128</length>
    <type>Text</type>
</CustomField>