force-app/main/default/objects/Account/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>Contains any notes related to the account</description>
    <inlineHelpText>Store any notes related to the account here</inlineHelpText>
    <label>Notes</label>
    <length>256</length>
    <type>LongTextArea</type>
</CustomField>