force-app/main/default/objects/Account/fields/November_Goal__c.field-meta.xml
<CustomField>
    <fullName>November_Goal__c</fullName>
    <label>November Goal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>