force-app/main/default/objects/Account/fields/November_Sales__c.field-meta.xml
<CustomField>
    <fullName>November_Sales__c</fullName>
    <defaultValue>0</defaultValue>
    <label>November Sales</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>