force-app/main/default/objects/Account/fields/November_State__c.field-meta.xml
<CustomField>
    <fullName>November_State__c</fullName>
    <label>November State</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>