force-app/main/default/objects/Account/fields/Number_of_Employees__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Employees__c</fullName>
    <label>Number of Employees</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1-10</fullName>
            </value>
            <value>
                <fullName>11-20</fullName>
            </value>
            <value>
                <fullName>21-50</fullName>
            </value>
            <value>
                <fullName>51-100</fullName>
            </value>
            <value>
                <fullName>101-250</fullName>
            </value>
            <value>
                <fullName>251-500</fullName>
            </value>
            <value>
                <fullName>501-1000</fullName>
            </value>
            <value>
                <fullName>1000+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>