force-app/main/default/objects/Account/fields/October_Goal__c.field-meta.xml
<CustomField>
    <fullName>October_Goal__c</fullName>
    <label>October Goal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>