force-app/main/default/objects/Account/fields/October_State__c.field-meta.xml
<CustomField>
    <fullName>October_State__c</fullName>
    <label>October State</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>