force-app/main/default/objects/Account/fields/Online_Courses_Utilized__c.field-meta.xml
<CustomField>
    <fullName>Online_Courses_Utilized__c</fullName>
    <label>Online Courses Utilized</label>
    <type>TextArea</type>
</CustomField>