force-app/main/default/objects/Account/fields/Online_Training_Contract__c.field-meta.xml
<CustomField>
    <fullName>Online_Training_Contract__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Online Training Contract?</label>
    <type>Checkbox</type>
</CustomField>