force-app/main/default/objects/Account/fields/Online_Training_Contract_Length__c.field-meta.xml
<CustomField>
    <fullName>Online_Training_Contract_Length__c</fullName>
    <label>Online Training Contract Length (Years)</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Online_Training_Contract__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>10</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>