force-app/main/default/objects/Account/fields/Online_Training_Provider__c.field-meta.xml
<CustomField>
    <fullName>Online_Training_Provider__c</fullName>
    <label>Online Training Provider</label>
    <length>30</length>
    <type>Text</type>
</CustomField>