force-app/main/default/objects/Account/fields/Opportunity_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Revenue__c</fullName>
    <inlineHelpText>Total of all &apos;Closed Won&apos; opportunities on Account</inlineHelpText>
    <label>Opportunity Revenue</label>
    <summarizedField>Opportunity.Amount</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>equals</operation>
        <value>Closed Won</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>