force-app/main/default/objects/Account/fields/OsgOnline_Id__c.field-meta.xml
<CustomField>
    <fullName>OsgOnline_Id__c</fullName>
    <externalId>true</externalId>
    <label>OsgOnline Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>