force-app/main/default/objects/Account/fields/Parent_Account_Owner__c.field-meta.xml
<CustomField>
    <fullName>Parent_Account_Owner__c</fullName>
    <formula>Parent.Owner.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Account Owner</label>
    <type>Text</type>
</CustomField>