force-app/main/default/objects/Account/fields/Parent_is_Principal_Account__c.field-meta.xml
<CustomField>
    <fullName>Parent_is_Principal_Account__c</fullName>
    <formula>Parent.Principal_Account__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent is Principal Account</label>
    <type>Checkbox</type>
</CustomField>