force-app/main/default/objects/Account/fields/PARENT_NAME_CLEANUP__c.field-meta.xml
<CustomField>
    <fullName>PARENT_NAME_CLEANUP__c</fullName>
    <formula>Parent.NAME_CLEANUP__c</formula>
    <label>PARENT_NAME_CLEANUP</label>
    <type>Text</type>
</CustomField>