force-app/main/default/objects/Account/fields/PARENT_PARENT_ID__c.field-meta.xml
<CustomField>
    <fullName>PARENT_PARENT_ID__c</fullName>
    <formula>Parent.ParentId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PARENT_PARENT_ID</label>
    <type>Text</type>
</CustomField>