force-app/main/default/objects/Account/fields/PARENT_REVIEW_NEEDED__c.field-meta.xml
<CustomField>
    <fullName>PARENT_REVIEW_NEEDED__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PARENT_REVIEW_NEEDED</label>
    <type>Checkbox</type>
</CustomField>