force-app/main/default/objects/Account/fields/Phone_Ext__c.field-meta.xml
<CustomField>
    <fullName>Phone_Ext__c</fullName>
    <label>Phone Ext</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>