force-app/main/default/objects/Account/fields/place_match_score__c.field-meta.xml
<CustomField>
    <fullName>place_match_score__c</fullName>
    <defaultValue>false</defaultValue>
    <label>place_match_score</label>
    <type>Checkbox</type>
</CustomField>