force-app/main/default/objects/Account/fields/Primary_Billing_Address__c.field-meta.xml
<CustomField>
    <fullName>Primary_Billing_Address__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Primary Billing Address</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account_Address__c.Account__c</field>
            <operation>equals</operation>
            <valueField>$Source.Id</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account_Address__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>