force-app/main/default/objects/Account/fields/Primary_Billing_Address_City__c.field-meta.xml
<CustomField>
    <fullName>Primary_Billing_Address_City__c</fullName>
    <formula>Primary_Billing_Address__r.City1__c</formula>
    <label>Primary Billing Address City</label>
    <type>Text</type>
</CustomField>