force-app/main/default/objects/Account/fields/Primary_Billing_Address_Count__c.field-meta.xml
<CustomField>
    <fullName>Primary_Billing_Address_Count__c</fullName>
    <label>Primary Billing Address Count</label>
    <summaryFilterItems>
        <field>Account_Address__c.Primary__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Account_Address__c.Type__c</field>
        <operation>equals</operation>
        <value>Billing Address</value>
    </summaryFilterItems>
    <summaryForeignKey>Account_Address__c.Account__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>