force-app/main/default/objects/Account/fields/Primary_Billing_Address_Country__c.field-meta.xml
<CustomField>
    <fullName>Primary_Billing_Address_Country__c</fullName>
    <formula>Primary_Billing_Address__r.Country1__c</formula>
    <label>Primary Billing Address Country</label>
    <type>Text</type>
</CustomField>