force-app/main/default/objects/Account/fields/Primary_Billing_Address_Province__c.field-meta.xml
<CustomField>
    <fullName>Primary_Billing_Address_Province__c</fullName>
    <formula>Primary_Billing_Address__r.Province1__c</formula>
    <label>Primary Billing Address Province</label>
    <type>Text</type>
</CustomField>