force-app/main/default/objects/Account/fields/Primary_Billing_Address_Street_Line_1__c.field-meta.xml
<CustomField>
    <fullName>Primary_Billing_Address_Street_Line_1__c</fullName>
    <formula>Primary_Billing_Address__r.Address1_1__c</formula>
    <label>Primary Billing Address Street Line 1</label>
    <type>Text</type>
</CustomField>