force-app/main/default/objects/Account/fields/Primary_Billing_Address_Type__c.field-meta.xml
<CustomField>
    <fullName>Primary_Billing_Address_Type__c</fullName>
    <formula>Text(Primary_Billing_Address__r.Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Billing Address Type</label>
    <type>Text</type>
</CustomField>