force-app/main/default/objects/Account/fields/Primary_Billing_Location_Address__c.field-meta.xml
<CustomField>
    <fullName>Primary_Billing_Location_Address__c</fullName>
    <formula>Primary_Billing_Address__r.Location_Address__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Billing Location Address</label>
    <type>Text</type>
</CustomField>