force-app/main/default/objects/Account/fields/Primary_Score__c.field-meta.xml
<CustomField>
    <fullName>Primary_Score__c</fullName>
    <formula>if (Purge_Exempt__c, 500, 0) + 
if (Added_To_Intacct__c, 500, 0) + 
if (isBlank(LearningLogin_Id__c), 0, 500) + 
if (isBlank(OsgOnline_Id__c), 0, 500) + 
if (isBlank(Primary_Contact__c), 0, 50) + 
if (isBlank(Invoice_Contact__c), 0, 50) + 
(Attendee_Count__c * 10) + 
(Contact_Count__c * 5) + 
(Lifetime_Sales__c /200) + 
(Sales_12_Months__c /50) + 
if ( DateValue(CreatedDate) &gt; (TODAY() - 365) , 200, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>