force-app/main/default/objects/Account/fields/Primary_Shipping_Address_City__c.field-meta.xml
<CustomField>
    <fullName>Primary_Shipping_Address_City__c</fullName>
    <formula>Primary_Shipping_Address__r.City1__c</formula>
    <label>Primary Shipping Address City</label>
    <type>Text</type>
</CustomField>