force-app/main/default/objects/Account/fields/Primary_Shipping_Address_Country__c.field-meta.xml
<CustomField>
    <fullName>Primary_Shipping_Address_Country__c</fullName>
    <formula>Primary_Shipping_Address__r.Country1__c</formula>
    <label>Primary Shipping Address Country</label>
    <type>Text</type>
</CustomField>