force-app/main/default/objects/Account/fields/Primary_Shipping_Address_Location__c.field-meta.xml
<CustomField>
    <fullName>Primary_Shipping_Address_Location__c</fullName>
    <formula>Primary_Shipping_Address__r.Location_Address__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Shipping Address Location</label>
    <type>Text</type>
</CustomField>