force-app/main/default/objects/Account/fields/Primary_Shipping_Address_PostalCode__c.field-meta.xml
<CustomField>
    <fullName>Primary_Shipping_Address_PostalCode__c</fullName>
    <formula>Primary_Shipping_Address__r.Postal_Code1__c</formula>
    <label>Primary Shipping Address PostalCode</label>
    <type>Text</type>
</CustomField>