force-app/main/default/objects/Account/fields/Primary_Shipping_Address_Primary__c.field-meta.xml
<CustomField>
    <fullName>Primary_Shipping_Address_Primary__c</fullName>
    <formula>Primary_Shipping_Address__r.Primary__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Shipping Address Primary</label>
    <type>Checkbox</type>
</CustomField>