force-app/main/default/objects/Account/fields/Primary_Shipping_Address_Province__c.field-meta.xml
<CustomField>
    <fullName>Primary_Shipping_Address_Province__c</fullName>
    <formula>Primary_Shipping_Address__r.Province1__c</formula>
    <label>Primary Shipping Address Province</label>
    <type>Text</type>
</CustomField>