force-app/main/default/objects/Account/fields/Primary_Shipping_Address_Type__c.field-meta.xml
<CustomField>
    <fullName>Primary_Shipping_Address_Type__c</fullName>
    <formula>Text( Primary_Shipping_Address__r.Type__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Shipping Address Type</label>
    <type>Text</type>
</CustomField>