force-app/main/default/objects/Account/fields/Primary_Shipping_Location_Address__c.field-meta.xml
<CustomField>
    <fullName>Primary_Shipping_Location_Address__c</fullName>
    <formula>Primary_Shipping_Address__r.Location_Address__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Shipping Location Address</label>
    <type>Text</type>
</CustomField>