force-app/main/default/objects/Account/fields/Principal_Account__c.field-meta.xml
<CustomField>
    <fullName>Principal_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Principal Account</label>
    <type>Checkbox</type>
</CustomField>