force-app/main/default/objects/Account/fields/Purge_Exempt__c.field-meta.xml
<CustomField>
    <fullName>Purge_Exempt__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Purge Exempt</label>
    <type>Checkbox</type>
</CustomField>