force-app/main/default/objects/Account/fields/Quote_Payment_Terms__c.field-meta.xml
<CustomField>
    <fullName>Quote_Payment_Terms__c</fullName>
    <label>Quote Payment Terms</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Force Card Under Threshold</fullName>
                <default>true</default>
                <label>Force Card Under Threshold</label>
            </value>
            <value>
                <fullName>Default Invoice</fullName>
            </value>
            <value>
                <fullName>Force Credit Card</fullName>
            </value>
            <value>
                <fullName>Force Invoice</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>