force-app/main/default/objects/Account/fields/Reason_Online_Provider_Selected__c.field-meta.xml
<CustomField>
    <fullName>Reason_Online_Provider_Selected__c</fullName>
    <label>Reason Online Provider Selected</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Price</fullName>
            </value>
            <value>
                <fullName>Course Selection</fullName>
            </value>
            <value>
                <fullName>Ease of Use</fullName>
            </value>
            <value>
                <fullName>Extra Features</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>