force-app/main/default/objects/Account/fields/Recalculate_Quarterly_Goals__c.field-meta.xml
<CustomField>
    <fullName>Recalculate_Quarterly_Goals__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Recalculate Quarterly Goals</label>
    <type>Checkbox</type>
</CustomField>