force-app/main/default/objects/Account/fields/Recalculate_Sales__c.field-meta.xml
<CustomField>
    <fullName>Recalculate_Sales__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Recalculate Sales</label>
    <type>Checkbox</type>
</CustomField>