force-app/main/default/objects/Account/fields/Reclaimed_Date__c.field-meta.xml
<CustomField>
    <fullName>Reclaimed_Date__c</fullName>
    <label>Reclaimed Date</label>
    <type>Date</type>
</CustomField>