force-app/main/default/objects/Account/fields/Reclaimed_From__c.field-meta.xml
<CustomField>
    <fullName>Reclaimed_From__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reclaimed From</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>