force-app/main/default/objects/Account/fields/Regulated__c.field-meta.xml
<CustomField>
    <fullName>Regulated__c</fullName>
    <label>Level of Government</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Municipal</fullName>
            </value>
            <value>
                <fullName>Provincial</fullName>
            </value>
            <value>
                <fullName>Federal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>