force-app/main/default/objects/Account/fields/Requested_Sales_Goal__c.field-meta.xml
<CustomField>
    <fullName>Requested_Sales_Goal__c</fullName>
    <label>Requested Sales Goal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>