force-app/main/default/objects/Account/fields/Revenue_History_Report__c.field-meta.xml
<CustomField>
    <fullName>Revenue_History_Report__c</fullName>
    <formula>HYPERLINK(&quot;#/sObject/00O46000000Xc7eEAC/view?fv0=&quot;&amp;Id, &quot;Revenue History Report&quot;, &quot;_self&quot;)</formula>
    <label>Revenue History Report</label>
    <type>Text</type>
</CustomField>