force-app/main/default/objects/Account/fields/Revenue_With_Child_Accounts__c.field-meta.xml
<CustomField>
    <fullName>Revenue_With_Child_Accounts__c</fullName>
    <formula>HYPERLINK(&quot;#/sObject/00O4p000004f7PhEAI/view?fv0=&quot;&amp; Id &amp; &quot;&amp;fv1=&quot; &amp; Id, &quot;Revenue w/ Child Accounts&quot;, &quot;_self&quot;)</formula>
    <label>Revenue With Child Accounts</label>
    <type>Text</type>
</CustomField>