force-app/main/default/objects/Account/fields/RH_Confirmed_Attendee_Count__c.field-meta.xml
<CustomField>
    <fullName>RH_Confirmed_Attendee_Count__c</fullName>
    <label>Confirmed Attendee Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>