force-app/main/default/objects/Account/fields/SafeGuard__c.field-meta.xml
<CustomField>
    <fullName>SafeGuard__c</fullName>
    <formula>if(OR(
find(&apos;NOT_USE&apos;,  Name) &gt; 0,
Added_To_Intacct__c = TRUE,
NOT(ISBLANK( LearningLogin_Id__c )),
NOT(ISBLANK( OsgOnline_Id__c  ))
), 
&quot;Can&apos;t delete this account! Contact your administrator&quot;,
&apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SafeGuard</label>
    <type>Text</type>
</CustomField>