force-app/main/default/objects/Account/fields/Sales_12_Months__c.field-meta.xml
<CustomField>
    <fullName>Sales_12_Months__c</fullName>
    <formula>Sales_Month_1__c + 
 Sales_Month_2__c + 
 Sales_Month_3__c + 
 Sales_Month_4__c + 
 Sales_Month_5__c + 
 Sales_Month_6__c + 
 Sales_Month_7__c + 
 Sales_Month_8__c + 
 Sales_Month_9__c + 
 Sales_Month_10__c + 
 Sales_Month_11__c + 
 Sales_Month_12__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales 12 Months</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>