force-app/main/default/objects/Account/fields/Sales_13_24_Months__c.field-meta.xml
<CustomField>
    <fullName>Sales_13_24_Months__c</fullName>
    <formula>Sales_Month_13__c + 
 Sales_Month_14__c + 
 Sales_Month_15__c + 
 Sales_Month_16__c + 
 Sales_Month_17__c + 
 Sales_Month_18__c + 
 Sales_Month_19__c + 
 Sales_Month_20__c + 
 Sales_Month_21__c + 
 Sales_Month_22__c + 
 Sales_Month_23__c + 
 Sales_Month_24__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales 13-24 Months</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>