force-app/main/default/objects/Account/fields/Sales_2004__c.field-meta.xml
<CustomField>
    <fullName>Sales_2004__c</fullName>
    <label>Sales 2004</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>