force-app/main/default/objects/Account/fields/Sales_2016_Present__c.field-meta.xml
<CustomField>
    <fullName>Sales_2016_Present__c</fullName>
    <formula>Sales_2016__c +  Sales_2017__c +  Sales_2018__c +  Sales_2019__c + Sales_2020__c + Sales_2021__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales (2016 - Present)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>